--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,5 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "bootstrap",
-        "syntax-highlighting"
+        "bootstrap"
 ;
