--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="container">
 
-  <header class="post-header">
+  <header class="row">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  <div class="post-content">
-    {{ content }}
+  <div class="row">
+    <div class="content-block">
+      {{ content }}
+    </div>
   </div>
 
 </article>
