--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="footer-row">
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+    <div class="container">
+      <div class="footer-col-small">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="footer-col-small">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -26,7 +26,7 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="footer-col-large">
         <p>{{ site.description }}</p>
       </div>
     </div>
