--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,11 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+    <div class="container">
+      <div class="row">
+        <div class="content-block">
+          {{ content }}
+        </div>
       </div>
     </div>
 
