--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,9 @@
           <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
         </div>
         <div id="navbar-collapse-1" class="collapse navbar-collapse">
+        {% assign pages = site.pages | sort:"weight" %}
         <ul class="nav navbar-nav navbar-right">
-          {% for my_page in site.pages %}
+          {% for my_page in pages %}
             {% if my_page.title %}
               {% if page.url == my_page.url %}
                 <li class="active"><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
