--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         </ul>
       </div>
 
-      <div class="footer-col-small">
+      <div class="footer-col-small pull-right">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -24,10 +24,6 @@
           </li>
           {% endif %}
         </ul>
-      </div>
-
-      <div class="footer-col-large">
-        <p>{{ site.description }}</p>
       </div>
     </div>
 
