--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,7 @@
-<footer class="site-footer">
-
-  <div class="footer-row">
-
+<footer id="footer">
     <div class="container">
-      <div class="footer-col-small">
+      <div class="row">
+        <div class="footer-col-small">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
@@ -25,8 +23,6 @@
           {% endif %}
         </ul>
       </div>
+      </div>
     </div>
-
-  </div>
-
 </footer>
