--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,21 @@
   {% include head.html %}
 
   <body>
-
+    <div class="wrap">
     {% include header.html %}
-
-    <div class="container">
+      <div class="container">
       <div class="row">
         <div class="content-block">
           {{ content }}
         </div>
       </div>
     </div>
-
+    <div id="push"></div>
+    </div>
+    
     {% include footer.html %}
-
+  <script src="{{ '/javascripts/jquery.min.js' | prepend: site.baseurl }}"></script>
+  <script src="{{ '/javascripts/bootstrap.min.js' | prepend: site.baseurl }}"></script>
   </body>
 
 </html>
