bootstrap nav footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,30 @@
 <footer id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="footer-col-small">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li>{{ site.title }}</li>
+                <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
 
-      <div class="footer-col-small pull-right">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-      </div>
-    </div>
+            </ul>
+        </div>
+    </nav>
 </footer>
+
+
+<div class="container">
+    <div class="row">
+        <div class="footer-col-small">
+            <ul class="contact-list">
+               {% if site.github_username %}
+                <li>
+                    {% include icon-github.html username=site.github_username %}
+                </li>
+                {% endif %} {% if site.twitter_username %}
+                <li>
+                    {% include icon-twitter.html username=site.twitter_username %}
+                </li> 
+            </ul>
+        </div>
+</div>
