style the navbar correctly

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <ul class="nav navbar-nav">
-                <li>{{ site.title }}</li>
+                <li class="navbar-text">{{ site.title }}</li>
                 <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
