--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
     <nav class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container">
+        <div class="container-fluid">
             <ul class="nav navbar-nav">
                 <li><a href="/">{{ site.title }}</a></li>
                 <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
@@ -8,14 +8,29 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if site.github_username %}
                 <li>
-                    {% include icon-github.html username=site.github_username %}
+                    <a href="http://github.com/{{site.github_username}}">
+                        <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+                        <span class="sr-only">Github username {{ site.github_username }}</span>
+                    </a>
                 </li>
                 {% endif %}
                 
                 {% if site.twitter_username %}
                 <li>
-                    {% include icon-twitter.html username=site.twitter_username %}
+                    <a href="http://twitter.com/{{site.twitter_username}}">
+                        <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter @{{ site.twitter_username }}</span>
+                    </a>
                 </li> 
+                {% endif %}
+
+                {% if site.linkedin_username %}
+                    <li>
+                        <a href="http://linkedin.com/in/{{site.linkedin_username}}">
+                            <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
+                            <span class="sr-only">Linked In username {{site.linkedin_username}}</span>
+                        </a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
