--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,14 @@
 
   <body>
     {% include header.html %}
-      <div class="container">
-      <div class="row">
+    <div class="wrap">
+      <section>
         <div class="content-block">
           {{ content }}
         </div>
-      </div>
+      </section>
     </div>
+      
     
     {% include footer.html %}
   <script src="{{ '/javascripts/jquery.min.js' | prepend: site.baseurl }}"></script>
