--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-  <article class="container">
+  <article>
 
-  <header class="row">
+  <header>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  <div class="row">
+  <section>
     <div class="content-block">
       {{ content }}
     </div>
