--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -1,22 +1,34 @@
-html, body{
-    height: 100%;
-}
-
 body {
     padding-top: 70px;
     padding-bottom: 70px;
 }
 
-.content-block{
-    @extend .col-md-8;
-    @extend .col-sm-12;
+.wrap{
+    @include container-fixed();
+
+    section{
+        @include make-row();
+
+        .content-block{
+            @include make-sm-column(12);
+            @include make-md-column(8);
+            @include make-md-column-offset(2);
+        }
+    }
 }
 
-.post-title{
-    @extend .col-md-4;
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
+article{
+    @include container-fixed();
+    header{
+        @include make-row();
+        .post-title{
+            @include make-md-column(4);
+            font-size: 42px;
+            letter-spacing: -1px;
+            line-height: 1;
+        }
+        
+    }
 }
 
 i {
