--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,6 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "bootstrap",
+        "bootstrap/scss/bootstrap",
         "default"
 ;
